
Improved Hex Editor: can now be backgrounded
Improved Debug I/O ports window: can now be backgrounded and it's reloaded continuously
Improved File spooling: delay can now be any value between 20 and 2000 ms (in increments of +20)
Improved File Browser: added file size information
Improved cocoa (Mac) driver: allows distinguish between left and right Ctrl key, and left and right Alt key


Fixed ZX-Uno bugs:
-Fixed bugs on mmc and flash storage layer which prevented to update bios, esxdos rom or entire flash from the BIOS
-Fixed chloe mmu mapping: bootm has priority. If bootm=1, can't map chloe. If bootm=0, can be chloe or +2a

Fixed TBBlue bugs:
-Fixed relative sprites: when anchor sprite is not visible, negative coordinates, detecting unified/composite, mirror, rotation
-Fixed 4bp sprites: pattern calculating, transparency, anchor
-Fixed clipping (affected scrollnutter demo in the right round corners)
-Fixed writing on divmmc memory when layer2 active

Fixed CPC bugs:
-Fixed vsync and hsync interrupts
-Fixed border colour
-Fixed AY chip register selection
-Fixed CRTC interrupts. After a CRTC interrupt with Z80 interrupts disabled, they were not fired when enabling Z80 interrupts
-Fixed setting bit 4 of the "Select screen mode and rom configuration" register of the Gate-Array and interrupt request
-Fixed RETURN key

Fixed IDE commands which affected almost all IDE firmwares: fatware, mdos, etc:
-Fixed IDE command ECH Identify Drive
-Fixed IDE command 91H Initialize Drive Parameters 

Fixed annoying flickering in menu using XWindows video driver
Fixed loading General Sound rom
Fixed segfaults on fileselector +3 DSK screen previews using Speedlock protected disks or bad disks
Fixed receiving large snapshots on ZRCP/ZENG
Fixed pixel color on text all-to-pixel text rendering (color inversion)
Fixed DivIDE/DivMMC mapram behaviour
Fixed some GUI style colours


Some other minor bugfixes and improvements



Version 9.1 - Toi Acid Game edition. 26 November 2020
